force-app/main/default/objects/product_shop__c/product_shop__c.object-meta.xml
<CustomObject>
    <label>product shop</label>
    <nameField>
        <label>product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>