force-app/main/default/objects/product_shop__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <referenceTo>category__c</referenceTo>
    <relationshipLabel>products</relationshipLabel>
    <relationshipName>products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>