force-app/main/default/objects/product_shop__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <description>price of my product</description>
    <label>price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>